--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -35,6 +35,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 4s ease;
+}
+
+.a-img:hover{
+    transform: translateY(-100%)
 }
 
 .a-title{
@@ -47,11 +52,76 @@
     margin: 20px 0px;
 }
 
+.a-project{
+    margin: 20px 0px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
 .a-desc{
     font-weight: 300;
 }
 
 @media screen and (max-width: 480px){
+    .a{
+        flex-direction: column;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .a-left{
+        width: 100%;
+    }
+
+    .a-card{
+        height: 30vh;
+        width: 70%;
+    }
+
+
+    .a-card.bg{
+        display: none;
+    }
+
+    .a-right{
+        padding: 20px;
+    }
+
+    .a-desc{
+        font-weight: 300;
+        margin-left: 20px;
+    }
+
+    .a-title{
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 768px)  and (min-width: 481px){
+    .a-title{
+        font-size: 50px;
+    }
+    .a{
+        flex-direction: column;
+        text-align: center;
+        margin-top: 80px;
+    }
+
+    .a-card{
+        width: 60%;
+        height: 40vh;
+        border-radius: 30px;
+        position: relative;
+        overflow: hidden;
+    }
+    .a-desc{
+        font-weight: 300;
+
+    }
+    
+}
+
+@media screen and (max-width: 1200px) and (min-width: 769px){
     .a{
         flex-direction: column;
         text-align: center;
@@ -63,56 +133,28 @@
     }
 
     .a-card{
-        height: 10vh;
+        height: 40vh;
     }
 
-    .a-card.bg{
+    /* .a-card.bg{
         display: none;
-    }
+    } */
 
     .a-right{
         padding: 20px;
     }
-}
 
-@media screen and (max-width: 768px){
-    .a{
-        margin-top: 80px;
+    .a-title{
+        font-size: 60px;
     }
-    .a-card.bg{
-       display: none;
-    }
-    .a-card{
-        width: 80%;
-        height: 60vh;
-        border-radius: 30px;
-        position: relative;
-        overflow: hidden;
+
+    .a-sub{
+        font-size: 30px;
     }
     .a-desc{
         font-weight: 300;
-        margin-right: 10%;
-    }
-    
-}
-
-@media screen and (max-width: 1200px){
-    .a{
-        margin-top: 80px;
-    }
-    .a-card.bg{
-       display: none;
-    }
-    .a-card{
-        width: 80%;
-        height: 30vh;
-        border-radius: 30px;
-        position: relative;
-        overflow: hidden;
-    }
-    .a-desc{
-        font-weight: 300;
-        margin-right: 10%;
+        font-size: 25px;
+        margin-left: 20px;
     }
     
 }
