--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -87,7 +87,45 @@ button{
     }
 
     .c-title{
-        font-size: 30px;
+        font-size: 40px;
+    }
+
+    .c-info-item{
+        font-size: 18px;
+        margin: 20px 0px;
+        width: 80%;
+    }
+
+    .c-desc{
+        display: none;
+    }
+
+    form{
+        margin-top: 0px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    input{
+        width: 35%;
+        height: 40px;
+        margin: 10px;
+        margin-left: 0px;
+    }
+
+    button{
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 481px){
+    .c-wrapper{
+        flex-direction: column;
+        padding: 0px 50px;
+    }
+
+    .c-title{
+        font-size: 50px;
     }
 
     .c-info-item{
@@ -118,40 +156,32 @@ button{
     }
 }
 
-@media screen and (max-width: 768px){
-    .c-wrapper{
-        flex-direction: column;
-        padding: 0px 50px;
-    }
-
-    .c-title{
-        font-size: 30px;
-    }
-
+@media screen and (max-width: 1200px) and (min-width: 769px){
+    
     .c-info-item{
-        font-size: 14px;
-        margin: 20px 0px;
-        width: 80%;
+        font-size: 22px;
     }
-
     .c-desc{
-        display: none;
+        font-size: 25px;
     }
 
     form{
-        margin-top: 0px;
-        display: flex;
-        flex-wrap: wrap;
+        margin-top: 30px;
     }
-
     input{
-        width: 35%;
-        height: 40px;
-        margin: 10px;
-        margin-left: 0px;
+        width: 60%;
+        height: 70px;
+        font-size: 24px;
     }
-
+    textarea{
+        width: 100%;
+        height: 100px;
+        font-size: 24px;
+    }
     button{
-        margin-top: 10px;
+        border: none;
+        padding: 30px;
+        background-color: rgb(54, 161, 161);
+        font-size: 24px;
     }
 }
