--- a/src/components/intro/cta.css
+++ b/src/components/intro/cta.css
@@ -15,3 +15,12 @@
     text-decoration : none;
     border-color : #000000
 }
+
+@media screen and (max-width: 1200px){
+    .download-btn{
+        font-size: 20px;
+        width: 115px;
+        height: 50px;
+        
+    }
+}
