--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -25,7 +25,7 @@
 
 .i-intro{
     font-size: 30px;
-    font-weight: normal;
+    font-weight: 300;
 }
 
 .i-name{
@@ -105,6 +105,86 @@ overflow: hidden;
     }
 }
 
-@media screen and (max-width: 768px){
-    
+@media screen and (max-width: 768px) and (min-width : 481px){
+    .i{
+        flex-direction: column;
+    }
+
+    .i-left-wrapper{
+        padding: 10px;
+        align-items: center;
+        text-align: center;
+        height: 100%;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    .i-title{
+        margin-bottom: 10px;
+    }
+    .i-title-item{
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .i-desc{
+        display: none;
+    }
 }
+
+@media screen and (max-width: 1200px) and (min-width : 769px){
+    .i{
+        flex-direction: column;
+    }
+    .i-intro{
+        margin-top: 80px;
+        font-size: 60px;
+    }
+
+    .i-name{
+    font-size: 90px;
+    }
+    .i-left-wrapper{
+        padding: 20px;
+        align-items: center;
+        text-align: center;
+        height: 100%;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    .i-title{
+        height: 80px;
+        overflow: hidden;
+        margin-bottom: 20px;
+        }
+    .i-title-item{
+        height: 80px;
+        font-size: 50px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+
+    @keyframes move {
+        25%{
+            transform: translateY(-80px);
+        }
+        50%{
+            transform: translateY(-160px);
+        }
+        75%{
+            transform: translateY(-240px);
+        }
+        100%{
+            transform: translateY(-320px);
+        }
+    }
+
+    .i-desc{
+        font-weight: 300;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+}
+
