--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -45,7 +45,7 @@
 .a-title{
     font-weight: 600;
     font-size: 30px;
-
+    margin-top: 10px;
 }
 
 .a-sub{
@@ -107,8 +107,11 @@
         margin-top: 80px;
     }
 
+    .a-card.bg{
+        display: none;
+    }
     .a-card{
-        width: 60%;
+        width: 100%;
         height: 40vh;
         border-radius: 30px;
         position: relative;
@@ -125,7 +128,7 @@
     .a{
         flex-direction: column;
         text-align: center;
-        margin-top: 80px;
+        margin-top: 50px;
     }
 
     .a-left{
@@ -155,6 +158,10 @@
         font-weight: 300;
         font-size: 25px;
         margin-left: 20px;
+    }
+
+    .a-project{
+        font-size: 30px;
     }
     
 }
